<preference-headers xmlns:android="http://schemas.android.com/apk/res/android">

    <!-- These settings headers are only used on tablets. -->

    <header
        android:fragment="com.avant.eng.daedotester.SettingsActivity$GeneralPreferenceFragment"
        android:icon="@drawable/ic_info_black_24dp"
        android:title="@string/pref_header_general" />

    <header
        android:fragment="com.avant.eng.daedotester.SettingsActivity$LevelsPreferenceFragment"
        android:icon="@drawable/ic_tune_black_24dp"
        android:title="@string/pref_header_levels" />

    <header
        android:fragment="com.avant.eng.daedotester.SettingsActivity$CalibrationPreferenceFragment"
        android:icon="@drawable/ic_sync_black_24dp"
        android:title="@string/pref_header_calibration" />
</preference-headers>
